# Dev_Image

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_linux.json  MyCMake.cmake  MyExports.cmake  MyGlobalImports.cmake  MyImports.cmake  MyLocalImports.cmake  README.md
CPrintLib/: CMakeLists.txt  CPrintDir.h  CPrintDir_linux.cpp  CPrintDir_win.cpp  cxFileManager.h  cxFileManager_class.cpp  cxFileManager_gcodedir.cpp  cxFileManager_workdir.cpp  cxFileManager_zipdir.cpp  cxGCodeWriter.cpp  cxGCodeWriter.h  cxScriptReader.cpp  cxScriptReader.h  cxScriptTester.cpp  cxScriptTester.h  cxScriptWriter.h  cxScriptWriter_class.cpp  cxScriptWriter_try.cpp  cxZipWriter.cpp  cxZipWriter.h  stdafx.h
CommonLib/: CMakeLists.txt  CPrintDir.h  CPrintDir_linux.cpp  CPrintDir_win.cpp  pxFileManager.h  pxFileManager_class.cpp  pxFileManager_gcodedir.cpp  pxFileManager_gcodedir_win.cpp  pxFileManager_workdir.cpp  pxFileManager_workdir_win.cpp  pxFileManager_zipdir.cpp  pxFileManager_zipdir_win.cpp  pxGCodeWriter.cpp  pxGCodeWriter.h  pxScriptReader.cpp  pxScriptReader.h  pxScriptTester.cpp  pxScriptTester.h  pxScriptWriter.h  pxScriptWriter_class.cpp  pxScriptWriter_try.cpp  pxZipWriter.cpp  pxZipWriter.h  risSystemCalls_win.cpp  stdafx.h
ContourFilter/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  Simulate.cpp  Simulate.h  svConArrayWriter.cpp  svConImageWriter.h  svConIndexListListWriter.h  svConLoIndexListWriter.cpp  svConLoIndexListWriter.h  svConRecord.h  svConRecordListWriter.h  svContourFilter.cpp  svContourFilter.h
DisplayLib/: CMakeLists.txt  displayFunctions.cpp  displayFunctions.h  displayGraphicsThread.h  displayGraphicsThread_draw0.cpp  displayGraphicsThread_draw1.cpp  displayGraphicsThread_draw2.cpp  displayGraphicsThread_thread.cpp  displayGraphicsThread_utils.cpp  displayGraphicsThread_video.cpp  displayParms.cpp  displayParms.h  stdafx.h
DisplayTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp
Docs/: calculate_variables.txt  class.txt  classify.txt  conmap.txt  filter_loop.txt  groups.txt  morph.txt  morph2.txt  nnrules.txt  nnrules2d.txt  nnrules3d.txt  nnrules3d_mat.txt  object_pyramid_diamond_11.txt  object_pyramid_diamond_12.txt  object_pyramid_diamond_13.txt  object_pyramid_square_11.txt  object_pyramid_square_12.txt  object_tower_diamond_11.txt  object_tower_diamond_12.txt  object_tower_diamond_13.txt  object_tower_square_11.txt  part_d13.txt  plane_classify.txt  simstack.txt
Experiment/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  FutureVar.cpp  FutureVar.h  MainInit.cpp
GenImage/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h
ImageGen/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp
Matrix/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  stdafx.h
NNRuleFilter/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  ImageSet.cpp  ImageSet.h  MainInit.cpp  Simulate.cpp
Numbers/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp
RCIndex/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp
SVLib/: CMakeLists.txt  someImageParms.cpp  stdafx.h  svConArrayWriter.cpp  svConArrayWriter.h  svConImageWriter.cpp  svConImageWriter.h  svConIndexListListWriter.cpp  svConIndexListListWriter.h  svConLoIndexListWriter.cpp  svConLoIndexListWriter.h  svConParms.cpp  svConParms.h  svConRecord.cpp  svConRecord.h  svConRecordArray.cpp  svConRecordArray.h  svConRecordList.h  svConRecordListWriter.cpp  svConRecordListWriter.h  svConShow.cpp  svConShow.h  svContourArrayWriter.cpp  svContourArrayWriter.h  svContourConjugateWriter.cpp  svContourConjugateWriter.h  svContourFilter.cpp  svContourFilter.h  svContourFilterParms.cpp  svContourFilterParms.h  svContourHiListWriter.cpp  svContourHiListWriter.h  svContourImageWriter.cpp  svContourImageWriter.h  svContourLoListWriter.cpp  svContourLoListWriter.h  svContourPixelMiner.cpp  svContourPixelMiner.h  svContourPixelRecord.cpp  svContourPixelRecord.h  (+119 more)
Scratch/: svImageFilter.cpp  svImageFilterBase.cpp  svImageFilterBase.h  svImageFilterContour.cpp  svImageFilterGaussBlur.cpp  svImageShow.cpp
Session/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  stdafx.h
Simulate/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  Simulate.cpp  Simulate.h  StackEvaluator.cpp  StackEvaluator.h  pxStackEvaluator.cpp  pxStackEvaluator.h
StackFilter/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  MainPrint.cpp  MainPrint.h  StackDisplay.cpp  StackDisplay.h  StackEvaluate.cpp  StackEvaluate.h  StackFilter.cpp  StackFilter.h  StackGenerate.cpp  StackGenerate.h  StackShow.cpp  StackShow.h  StackSimulate.cpp  StackSimulate.h
Test/: CMakeLists.txt  CmdLineExec.cpp
